alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_4.snap
---
source: alpm-types/src/relation/composite.rs
---
error: invalid sonamev2
 | 
 | lib:libexample.so.1.0.0-64
 |                        ^ expected end of input.
 | 
 = while parsing:
   alpm-sonamev2: (-64)
   → invalid sonamev2
   → expected end of input.
